--- a/.github/workflows/release_notifier.yml
+++ b/.github/workflows/release_notifier.yml
@@ -2,7 +2,7 @@ name: Release Notifications
 
 on:
   release:
-    types: [published]
+    types: [released]
     # https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions#onevent_nametypes
 
 jobs:
