--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: Create Package
+name: CI
 
 on:
   pull_request:
@@ -69,6 +69,12 @@ jobs:
         uses: actions/setup-python@v2  # https://github.com/actions/setup-python
         with:
           python-version: '3.9'
+
+      - name: Build plist
+        env:
+          BUILD_VERSION: ${{ needs.check_changelog.outputs.next_version }}
+        run: |
+          python ./scripts/build_plist.py
 
       - name: Set up Python 3.9 Dependencies
         env:
