--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -55,7 +55,8 @@ jobs:
           echo "Installing Plex Agent Requirements"
           python --version
           python -m pip --no-python-version-warning --disable-pip-version-check install --upgrade pip==20.3.4 setuptools
-          pip install --target=${{ env.TARGET_DIR }} -r ${{ env.TARGET_DIR }}/requirements.txt  --no-warn-script-location --ignore-requires-python
+          python -m pip --no-python-version-warning --disable-pip-version-check install --upgrade requests<2.28
+          python -m pip --no-python-version-warning --disable-pip-version-check install --target=${{ env.TARGET_DIR }} -r ${{ env.TARGET_DIR }}/requirements.txt  --no-warn-script-location --ignore-requires-python
 
       - name: Test Plex Agent
         env:
@@ -84,7 +85,7 @@ jobs:
           echo "Installing RetroArcher Requirements"
           python --version
           python -m pip install --upgrade pip
-          pip install --target=${{ env.TARGET_DIR }} -r ${{ env.TARGET_DIR }}/requirements.txt --no-warn-script-location
+          python -m pip install --target=${{ env.TARGET_DIR }} -r ${{ env.TARGET_DIR }}/requirements.txt --no-warn-script-location
 
       - name: Test RetroArcher
         env:
