--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -106,12 +106,12 @@ jobs:
             !**/*.git*
             !**/*.pyc
             !**/__pycache__
-            !**/scripts
+            !**/RetroArcher.bundle/scripts
 
       - name: Package Release
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         run: |
-          7z "-xr!*.git*" "-xr!*.pyc" "-xr!__pycache__" "-xr!scripts" a "./RetroArcher.bundle-${{ runner.os }}.zip" "RetroArcher.bundle"
+          7z "-xr!*.git*" "-xr!*.pyc" "-xr!__pycache__" "-xr!RetroArcher.bundle/scripts" a "./RetroArcher.bundle-${{ runner.os }}.zip" "RetroArcher.bundle"
 
       - name: Create/Update GitHub Release
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
