--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -87,6 +87,12 @@ jobs:
           python -m pip install --upgrade pip setuptools
           python -m pip install --target=${{ env.TARGET_DIR }} -r ${{ env.TARGET_DIR }}/requirements.txt --no-warn-script-location
 
+      - name: Overwrite ADB Binaries
+        run: |
+          echo "Overwriting Latest ADB Binaries"
+          python -m pip install -r ./scripts/requirements.txt
+          python ./scripts/download_adb_binaries.py
+
       - name: Test RetroArcher
         env:
           TARGET_DIR: ./Contents/Code/retroarcher
