--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,3 +20,10 @@ updates:
       interval: "daily"
     target-branch: "nightly"
     open-pull-requests-limit: 10
+
+  - package-ecosystem: "pip"
+    directory: "scripts"
+    schedule:
+      interval: "daily"
+    target-branch: "nightly"
+    open-pull-requests-limit: 10
