--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -17,5 +17,6 @@ jobs:
           exclude: nightly # Don't prevent going from nightly -> master
           change-to: nightly
           comment: |
-              Your PR was set to `master`, PRs should be sent to `nightly`
-              The base branch of this PR has been automatically changed to `nightly`, please check that there are no merge conflicts
+              Your PR was set to `master`, PRs should be sent to `nightly`.
+              The base branch of this PR has been automatically changed to `nightly`.
+              Please check that there are no merge conflicts
