Update donation links

--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -53,7 +53,8 @@
                 </tr>
                 <tr>
                     <td><i class="fa fa-fw fa-donate"></i> Donate:</td>
-                    <td>| <i class="fab fa-fw fa-github-alt"></i> <a href="https://github.com/sponsors/ReenigneArcher" target="_blank">Github</a></td>
+                    <td>| <i class="fab fa-fw fa-github-alt"></i> <a href="https://github.com/sponsors/RetroArcher" target="_blank">Github</a></td>
+                    <td>| <i class="fa-solid fa-fw fa-face-surprise"></i> <a href="https://mee6.xyz/m/804382334370578482" target="_blank">MEE6</a></td>
                     <td>| <i class="fab fa-fw fa-patreon"></i> <a href="https://patreon.com/RetroArcher" target="_blank">Patreon</a></td>
                     <td>| <i class="fab fa-fw fa-paypal"></i> <a href="https://paypal.me/ReenigneArcher" target="_blank">Paypal</a></td>
                 </tr>
