ci: use new LizardByte setup python action

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,10 +43,12 @@ jobs:
         with:
           path: RetroArcher-plex.bundle
 
-      - name: Install Python 2.7
-        uses: LizardByte/.github/actions/setup_python2@nightly
+      - name: Set up Python
+        uses: LizardByte/action-setup-python@master
+        with:
+          python-version: '2.7'
 
-      - name: Set up Python 2.7 Dependencies
+      - name: Set up Python Dependencies
         working-directory: RetroArcher-plex.bundle
         run: |
           echo "Installing Requirements"
