--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,7 +44,7 @@ jobs:
           path: RetroArcher-plex.bundle
 
       - name: Set up Python
-        uses: LizardByte/action-setup-python@master
+        uses: LizardByte/setup-python-action@v2023.10.23-7bf3fc9
         with:
           python-version: '2.7'
 
