--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,7 +44,7 @@ jobs:
           path: RetroArcher-plex.bundle
 
       - name: Set up Python
-        uses: LizardByte/setup-python-action@v2023.10.23-7bf3fc9
+        uses: LizardByte/setup-python-action@v2023.1128.10441
         with:
           python-version: '2.7'
 
