ci: automated rolling releases

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,7 +3,7 @@ name: CI
 
 on:
   pull_request:
-    branches: [master, nightly]
+    branches: [master]
     types: [opened, synchronize, reopened]
   push:
     branches: [master]
@@ -14,28 +14,39 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  check_changelog:
-    name: Check Changelog
+  setup_release:
+    name: Setup Release
+    outputs:
+      changelog_changes: ${{ steps.setup_release.outputs.changelog_changes }}
+      changelog_date: ${{ steps.setup_release.outputs.changelog_date }}
+      changelog_exists: ${{ steps.setup_release.outputs.changelog_exists }}
+      changelog_release_exists: ${{ steps.setup_release.outputs.changelog_release_exists }}
+      changelog_url: ${{ steps.setup_release.outputs.changelog_url }}
+      changelog_version: ${{ steps.setup_release.outputs.changelog_version }}
+      publish_pre_release: ${{ steps.setup_release.outputs.publish_pre_release }}
+      publish_release: ${{ steps.setup_release.outputs.publish_release }}
+      publish_stable_release: ${{ steps.setup_release.outputs.publish_stable_release }}
+      release_body: ${{ steps.setup_release.outputs.release_body }}
+      release_build: ${{ steps.setup_release.outputs.release_build }}
+      release_commit: ${{ steps.setup_release.outputs.release_commit }}
+      release_generate_release_notes: ${{ steps.setup_release.outputs.release_generate_release_notes }}
+      release_tag: ${{ steps.setup_release.outputs.release_tag }}
+      release_version: ${{ steps.setup_release.outputs.release_version }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Verify Changelog
-        id: verify_changelog
-        if: ${{ github.ref == 'refs/heads/master' || github.base_ref == 'master' }}
-        # base_ref for pull request check, ref for push
-        uses: LizardByte/.github/actions/verify_changelog@master
+      - name: Setup Release
+        id: setup_release
+        uses: LizardByte/setup-release-action@v2023.1207.150459
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-    outputs:
-      next_version: ${{ steps.verify_changelog.outputs.changelog_parser_version }}
-      last_version: ${{ steps.verify_changelog.outputs.latest_release_tag_name }}
-      release_body: ${{ steps.verify_changelog.outputs.changelog_parser_description }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
   build:
+    needs:
+      - setup_release
     runs-on: ubuntu-20.04
-    needs: check_changelog
 
     steps:
       - name: Checkout
@@ -49,6 +60,7 @@ jobs:
           python-version: '2.7'
 
       - name: Set up Python Dependencies
+        shell: bash
         working-directory: RetroArcher-plex.bundle
         run: |
           echo "Installing Requirements"
@@ -64,37 +76,18 @@ jobs:
       - name: Build plist
         working-directory: RetroArcher-plex.bundle
         env:
-          BUILD_VERSION: ${{ needs.check_changelog.outputs.next_version }}
+          BUILD_VERSION: ${{ needs.setup_release.outputs.release_tag }}
         run: |
           python scripts/build_plist.py
 
       - name: Test Plex Agent
+        # todo - replace with pytest
         working-directory: RetroArcher-plex.bundle
         run: |
           python ./Contents/Code/__init__.py
 
-      - name: Upload Artifacts
-        if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: RetroArcher-plex.bundle
-          if-no-files-found: error  # 'warn' or 'ignore' are also available, defaults to `warn`
-          path: |
-            ${{ github.workspace }}
-            !**/*.git*
-            !**/*.pyc
-            !**/__pycache__
-            !**/plexhints*
-            !**/RetroArcher-plex.bundle/.*
-            !**/RetroArcher-plex.bundle/cache.sqlite
-            !**/RetroArcher-plex.bundle/DOCKER_README.md
-            !**/RetroArcher-plex.bundle/Dockerfile
-            !**/RetroArcher-plex.bundle/docs
-            !**/RetroArcher-plex.bundle/scripts
-
       - name: Package Release
         shell: bash
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         run: |
           7z \
             "-xr!*.git*" \
@@ -112,11 +105,24 @@ jobs:
           mkdir artifacts
           mv ./RetroArcher-plex.bundle.zip ./artifacts/
 
-      - name: Create Release
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
-        uses: LizardByte/.github/actions/create_release@master
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
         with:
+          name: RetroArcher-plex.bundle
+          if-no-files-found: error  # 'warn' or 'ignore' are also available, defaults to `warn`
+          path: |
+            ${{ github.workspace }}/artifacts
+
+      - name: Create/Update GitHub Release
+        if: ${{ needs.setup_release.outputs.publish_release == 'true' }}
+        uses: LizardByte/create-release-action@v2023.1128.2625
+        with:
+          allowUpdates: true
+          body: ''
+          discussionCategory: announcements
+          generateReleaseNotes: true
+          name: ${{ needs.setup_release.outputs.release_tag }}
+          # use pre-release for now
+          prerelease: true  # ${{ needs.setup_release.outputs.publish_pre_release }}
+          tag: ${{ needs.setup_release.outputs.release_tag }}
           token: ${{ secrets.GH_BOT_TOKEN }}
-          next_version: ${{ needs.check_changelog.outputs.next_version }}
-          last_version: ${{ needs.check_changelog.outputs.last_version }}
-          release_body: ${{ needs.check_changelog.outputs.release_body }}
