ci: use prerelease logic

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,26 +10,16 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: true
 
 jobs:
   setup_release:
     name: Setup Release
     outputs:
-      changelog_changes: ${{ steps.setup_release.outputs.changelog_changes }}
-      changelog_date: ${{ steps.setup_release.outputs.changelog_date }}
-      changelog_exists: ${{ steps.setup_release.outputs.changelog_exists }}
-      changelog_release_exists: ${{ steps.setup_release.outputs.changelog_release_exists }}
-      changelog_url: ${{ steps.setup_release.outputs.changelog_url }}
-      changelog_version: ${{ steps.setup_release.outputs.changelog_version }}
-      publish_pre_release: ${{ steps.setup_release.outputs.publish_pre_release }}
       publish_release: ${{ steps.setup_release.outputs.publish_release }}
-      publish_stable_release: ${{ steps.setup_release.outputs.publish_stable_release }}
-      release_body: ${{ steps.setup_release.outputs.release_body }}
       release_build: ${{ steps.setup_release.outputs.release_build }}
       release_commit: ${{ steps.setup_release.outputs.release_commit }}
-      release_generate_release_notes: ${{ steps.setup_release.outputs.release_generate_release_notes }}
       release_tag: ${{ steps.setup_release.outputs.release_tag }}
       release_version: ${{ steps.setup_release.outputs.release_version }}
     runs-on: ubuntu-latest
@@ -39,7 +29,7 @@ jobs:
 
       - name: Setup Release
         id: setup_release
-        uses: LizardByte/setup-release-action@v2023.1210.1904
+        uses: LizardByte/setup-release-action@v2024.520.193857
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -55,7 +45,7 @@ jobs:
           path: RetroArcher-plex.bundle
 
       - name: Set up Python
-        uses: LizardByte/setup-python-action@v2023.1211.161304
+        uses: LizardByte/setup-python-action@v2024.515.10401
         with:
           python-version: '2.7'
 
@@ -96,10 +86,13 @@ jobs:
             "-xr!plexhints*" \
             "-xr!RetroArcher-plex.bundle/.*" \
             "-xr!RetroArcher-plex.bundle/cache.sqlite" \
+            "-xr!RetroArcher-plex.bundle/codecov.yml" \
+            "-xr!RetroArcher-plex.bundle/crowdin.yml" \
             "-xr!RetroArcher-plex.bundle/DOCKER_README.md" \
             "-xr!RetroArcher-plex.bundle/Dockerfile" \
             "-xr!RetroArcher-plex.bundle/docs" \
             "-xr!RetroArcher-plex.bundle/scripts" \
+            "-xr!RetroArcher-plex.bundle/tests" \
             a "./RetroArcher-plex.bundle.zip" "RetroArcher-plex.bundle"
 
           mkdir artifacts
@@ -115,14 +108,12 @@ jobs:
 
       - name: Create/Update GitHub Release
         if: ${{ needs.setup_release.outputs.publish_release == 'true' }}
-        uses: LizardByte/create-release-action@v2023.1210.832
+        uses: LizardByte/create-release-action@v2024.520.193838
         with:
           allowUpdates: true
-          body: ''
           discussionCategory: announcements
           generateReleaseNotes: true
           name: ${{ needs.setup_release.outputs.release_tag }}
-          # use pre-release for now
-          prerelease: true  # ${{ needs.setup_release.outputs.publish_pre_release }}
+          prerelease: true
           tag: ${{ needs.setup_release.outputs.release_tag }}
           token: ${{ secrets.GH_BOT_TOKEN }}
